fixed overflow

--- a/src/components/AdminDash/AdminDash.css
+++ b/src/components/AdminDash/AdminDash.css
@@ -1,5 +1,5 @@
 .admin-sec {
-    @apply bg-light py-10 flex flex-col items-center w-screen;
+    @apply bg-light py-10 flex flex-col items-center w-screen overflow-auto;
 }
 
 .admin-sec h2{
@@ -19,7 +19,7 @@
 }
 
 .user-details {
-    @apply bg-white border border-blue-300 rounded-lg w-6/12 font-poppins;
+    @apply bg-white border border-blue-300 rounded-lg w-6/12 font-poppins ;
     border-collapse: collapse;
 }
 
